# AtomC_compiler

./: CMakeLists.txt  ad.c  ad.h  lexer.c  lexer.h  main.c  parser.c  parser.h  vm.c
src/: ad.c  at.c  gc.c  lexer.c  main.c  parser.c  utils.c  vm.c
src/headers/: at.h  lexer.h  parser.h  vm.h
